# tinux

./: .cproject  .project  README.md  ld.bfd.help.txt  ld.help.txt
boot/: boot.asm  loader.asm
kernel/a/: hello  hello.asm
kernel/b/: bar.c  foo.asm  foobar
kernel/c/: boot.asm  kernel.asm  klib.inc  loader.asm
kernel/d/: a.img  b.img  fat12hdr.inc  kernel.asm  loader.asm  loader1.asm  pm.inc
kernel/e/: kernel.asm  protect.h  start.c  tinux.h
kernel/f/: MakeFile  b.img
kernel/g/: CMakeLists.txt  makefile
kernel/g/include/: global.h  proto.h  tinux.h  type.h
kernel/g/kernel/: global.c  kernel.asm  protect.c  start.c
kernel/g/lib/: klib.asm
kernel/h/: .cproject  .project  CMakeLists.txt  kernel.txt  makefile
kernel/h/include/: global.h  protect.h  proto.h  string.h
kernel/h/kernel/: 8259A.c  global.c  kernel.asm  protect.c  start.c
kernel/h/lib/: klibc.c
keyboard/: .cproject  .project
keyboard/include/: proc.h  protect.h  string.h
keyboard/kernel/: 8259A.c  keyboard.c  main.c  start.c  syscall.asm
pm/: 8259A.asm  BigMemRW.asm  CallGate1.asm  CallGate2.asm  CallGate3.asm  GetMemInfo.asm  IntoPM.asm  LDT.asm  PageTblSwitch.asm  StartPageing.asm  lib.inc  pm.inc
procdbg/: .cproject  .project  makefile
procdbg/.metadata/: version.ini
procdbg/Debug/: makefile
procdbg/include/: const.h  global.h  proc.h  proto.h  sconst.inc
procdbg/kernel/: clock.c  global.c  kernel.asm  main.c  proc.c  protect.c  schedule.c
procdbg/lib/: klib.asm  klibc.c
process/: .cproject  .project  kernel.elf.txt  makefile
tools/: a.img  bochsrc.bxrc
(+38 files in other folders)
